@@ -9,7 +9,7 @@ Gem::Specification.new do |s|
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Aslak Helles\303\270y"]
-  s.date = %q{2010-03-11}
+  s.date = %q{2010-03-26}
   s.default_executable = %q{cucumber}
   s.description = %q{A BDD tool written in Ruby}
   s.email = %q{cukes@googlegroups.com}
@@ -46,10 +46,10 @@ Gem::Specification.new do |s|
      "examples/i18n/bg/features/support/env.rb",
      "examples/i18n/bg/features/support/world.rb",
      "examples/i18n/bg/lib/calculator.rb",
-     "examples/i18n/cat/Rakefile",
-     "examples/i18n/cat/features/step_definitons/calculator_steps.rb",
-     "examples/i18n/cat/features/suma.feature",
-     "examples/i18n/cat/lib/calculadora.rb",
+     "examples/i18n/ca/Rakefile",
+     "examples/i18n/ca/features/step_definitons/calculator_steps.rb",
+     "examples/i18n/ca/features/suma.feature",
+     "examples/i18n/ca/lib/calculadora.rb",
      "examples/i18n/da/Rakefile",
      "examples/i18n/da/features/sammenlaegning.feature",
      "examples/i18n/da/features/step_definitons/lommeregner_steps.rb",
@@ -167,25 +167,25 @@ Gem::Specification.new do |s|
      "examples/i18n/ru/features/support/env.rb",
      "examples/i18n/ru/features/support/world.rb",
      "examples/i18n/ru/lib/calculator.rb",
-     "examples/i18n/se/Rakefile",
-     "examples/i18n/se/features/step_definitons/kalkulator_steps.rb",
-     "examples/i18n/se/features/summering.feature",
-     "examples/i18n/se/lib/kalkulator.rb",
      "examples/i18n/sk/.gitignore",
      "examples/i18n/sk/Rakefile",
      "examples/i18n/sk/features/addition.feature",
      "examples/i18n/sk/features/division.feature",
      "examples/i18n/sk/features/step_definitons/calculator_steps.rb",
      "examples/i18n/sk/lib/calculator.rb",
-     "examples/i18n/sr-latn/Rakefile",
-     "examples/i18n/sr-latn/features/sabiranje.feature",
-     "examples/i18n/sr-latn/features/step_definitons/calculator_steps.rb",
-     "examples/i18n/sr-latn/lib/calculator.rb",
-     "examples/i18n/sr/Rakefile",
-     "examples/i18n/sr/features/sabiranje.feature",
-     "examples/i18n/sr/features/step_definitons/calculator_steps.rb",
-     "examples/i18n/sr/features/support/env.rb",
-     "examples/i18n/sr/lib/calculator.rb",
+     "examples/i18n/sr-Cyrl/Rakefile",
+     "examples/i18n/sr-Cyrl/features/sabiranje.feature",
+     "examples/i18n/sr-Cyrl/features/step_definitons/calculator_steps.rb",
+     "examples/i18n/sr-Cyrl/features/support/env.rb",
+     "examples/i18n/sr-Cyrl/lib/calculator.rb",
+     "examples/i18n/sr-Latn/Rakefile",
+     "examples/i18n/sr-Latn/features/sabiranje.feature",
+     "examples/i18n/sr-Latn/features/step_definitons/calculator_steps.rb",
+     "examples/i18n/sr-Latn/lib/calculator.rb",
+     "examples/i18n/sv/Rakefile",
+     "examples/i18n/sv/features/step_definitons/kalkulator_steps.rb",
+     "examples/i18n/sv/features/summering.feature",
+     "examples/i18n/sv/lib/kalkulator.rb",
      "examples/i18n/tr/.gitignore",
      "examples/i18n/tr/Rakefile",
      "examples/i18n/tr/features/bolme.feature",
@@ -612,8 +612,8 @@ for important information about this release. Happy cuking!
      "examples/i18n/bg/features/support/env.rb",
      "examples/i18n/bg/features/support/world.rb",
      "examples/i18n/bg/lib/calculator.rb",
-     "examples/i18n/cat/features/step_definitons/calculator_steps.rb",
-     "examples/i18n/cat/lib/calculadora.rb",
+     "examples/i18n/ca/features/step_definitons/calculator_steps.rb",
+     "examples/i18n/ca/lib/calculadora.rb",
      "examples/i18n/da/features/step_definitons/lommeregner_steps.rb",
      "examples/i18n/da/lib/lommeregner.rb",
      "examples/i18n/de/features/step_definitons/calculator_steps.rb",
@@ -665,15 +665,15 @@ for important information about this release. Happy cuking!
      "examples/i18n/ru/features/support/env.rb",
      "examples/i18n/ru/features/support/world.rb",
      "examples/i18n/ru/lib/calculator.rb",
-     "examples/i18n/se/features/step_definitons/kalkulator_steps.rb",
-     "examples/i18n/se/lib/kalkulator.rb",
      "examples/i18n/sk/features/step_definitons/calculator_steps.rb",
      "examples/i18n/sk/lib/calculator.rb",
-     "examples/i18n/sr/features/step_definitons/calculator_steps.rb",
-     "examples/i18n/sr/features/support/env.rb",
-     "examples/i18n/sr/lib/calculator.rb",
-     "examples/i18n/sr-latn/features/step_definitons/calculator_steps.rb",
-     "examples/i18n/sr-latn/lib/calculator.rb",
+     "examples/i18n/sr-Cyrl/features/step_definitons/calculator_steps.rb",
+     "examples/i18n/sr-Cyrl/features/support/env.rb",
+     "examples/i18n/sr-Cyrl/lib/calculator.rb",
+     "examples/i18n/sr-Latn/features/step_definitons/calculator_steps.rb",
+     "examples/i18n/sr-Latn/lib/calculator.rb",
+     "examples/i18n/sv/features/step_definitons/kalkulator_steps.rb",
+     "examples/i18n/sv/lib/kalkulator.rb",
      "examples/i18n/tr/features/step_definitons/hesap_makinesi_adimlari.rb",
      "examples/i18n/tr/lib/hesap_makinesi.rb",
      "examples/i18n/uz/features/step_definitons/calculator_steps.rb",
