@@ -1,4 +1,4 @@
-# language: sr
+# language: sr-Cyrl
 Функционалност: Сабиранје
   Да бих избегао смешне грешке
   Као математичка незналица
