@@ -1,7 +1,7 @@
 module Cucumber
   module Parser
     module I18n
-      grammar <%= keywords('grammar_name')[0] %>
+      grammar <%= @grammar_name %>
         include Feature
         include Table
         include PyString
